--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -62,6 +62,7 @@ nav a:hover {
 
 .btn {
     display: inline-block;
+    margin: 0 auto;
     padding: 8px 16px;
     background-color: #0066cc;
     color: white;
@@ -97,12 +98,15 @@ label {
 }
 
 footer {
-    margin-top: 30px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     padding: 10px;
     text-align: center;
     background-color: #333;
     color: white;
-    width: 100%;
+    z-index: 1000;
 }
 
 .auth-links {
