--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -33,6 +33,15 @@
             class="form-control"
             required
           ></input>
+        <div class="form-group">
+          <label for="confirmPassword">Passwort bestätigen</label>
+          <input
+            type="password"
+            id="confirmPassword"
+            name="confirmPassword"
+            class="form-control"
+            required
+          ></input>
         </div>
 
 
