--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,140 +1,40 @@
-body {
+body, html {
+        height: 100%;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    font-family: "Roboto Mono", sans-serif;
 }
 
-a {
-    text-decoration: none;
-    color: #0066cc;
-}
-
-nav {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-    margin: 0 10px;
-}
-
-nav a:hover {
-    color: #ddd;
-}
-
-.container {
-    width: 80%;
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
-}
-
-.entry-list {
-    margin-top: 20px;
-}
-
-.entry-item {
-    border: 1px solid #ddd;
-    padding: 15px;
-    margin-bottom: 15px;
-    border-radius: 5px;
-}
-
-.tag-item {
-    display: inline-block;
-    background-color: #eee;
-    padding: 6px 8px;
-    margin-right: 5px;
-    border-radius: 3px;
-    font-size: 0.8em;
-}
-
-.btn {
-    display: inline-block;
-    margin: 0 auto;
-    padding: 8px 16px;
-    background-color: #0066cc;
-    color: white;
-    border-radius: 3px;
-    text-decoration: none;
-    margin-top: 10px;
+h1, h2, h3 {
+    text-align: center;
+    margin: 40px;
     font-weight: bold;
 }
 
-.btn-primary {
-    background-color: #0066cc;
-}
-
-.btn-danger {
-    background-color: #dc3545;
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-}
-
 .form-control {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-    resize: none;
+    margin-bottom: 20px;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px;
+    background-color: #343a40;
+    color: white;
     text-align: center;
-    background-color: #333;
-    color: white;
-    z-index: 1000;
+    width: 100%;
+    bottom: 0;
 }
 
-.auth-links {
-    margin-left: auto;
+#home {
+    font-size: 2em;
 }
 
-.auth-links button {
-    background: none;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 1em;
+.nav-link {
+    font-size: 1.2em;
 }
 
-.alert {
-    padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 3px;
-}
 
-.alert-danger {
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
-}
 
-.alert-success {
-    background-color: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
-}
+
+
+
+
