Füge neue Home-Seite hinzu, verbessere das Layout der Registrierungs- und Tag-Formulare, aktualisiere Sicherheitskonfiguration und entferne die alte Index-Seite

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
   <head th:replace="layout :: head('Login - Learning Journal')"></head>
   <body>
     <div th:replace="~{layout :: nav}"></div>
-    
+
     <h2>Login</h2>
     <div class="container">
       <div th:if="${param.error}">
@@ -18,30 +18,31 @@
       <div th:if="${param.login}">
         <div class="alert alert-success">Du wurdest angemeldet</div>
       </div>
-      
+
       <div class="container">
         <form th:action="@{/login}" method="post">
-            <label for="username">Benutzername</label>
-            <input
-              type="text"
-              id="username"
-              name="username"
-              class="form-control"
-              required
-              autofocus
-            />
-            <label for="password">Passwort</label>
-            <input
-              type="password"
-              id="password"
-              name="password"
-              class="form-control"
-              required
-            />
+          <label for="username">Benutzername</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            class="form-control"
+            required
+            autofocus
+          />
+          <label for="password">Passwort</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            class="form-control"
+            required
+          />
           <button type="submit" class="btn btn-primary">Anmelden</button>
         </form>
       </div>
     </div>
     <div th:replace="layout :: footer"></div>
+    <div th:replace="layout :: script"></div>
   </body>
 </html>
