--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -8,22 +8,51 @@
   <body>
     <div th:replace="~{layout :: nav}"></div>
 
-    <div class="container mt-5">
+    <div class="container mt-1 mb-1">
       <h1 class="mb-4">Einträge 📝</h1>
-      <a th:href="@{/entries/new}" class="btn btn-primary mb-4">Neuer Eintrag</a>
-      <div class="row">
-        <div th:each="entry : ${entries}" class="col-md-6 mb-4">
+      <a th:href="@{/entries/new}" class="btn btn-primary mb-4"
+        >Neuer Eintrag</a>
+
+      <div class="d-flex flex-column justify-content-center align-items-center">
+        <div th:each="entry : ${entries}" class="col-12 mb-4">
           <div class="card">
             <div class="card-body">
-              <h2 class="card-title" th:text="${entry.title}"></h2>
+              <h5 class="card-title" th:text="${entry.title}"></h5>
               <p class="card-text" th:text="${entry.content}"></p>
-              <p>
-                <span
-                  class="badge bg-secondary me-1"
-                  th:each="tag : ${entry.tags}"
-                  th:text="${tag.name}"
-                ></span>
-              </p>
+
+              <div class="d-flex justify-content-between align-items-end mt-auto">
+              
+                  <p>
+                    <span
+                      class="badge bg-secondary me-1"
+                      th:each="tag : ${entry.tags}">
+                    <span th:text="${tag.name}"></span>
+                    <a th:href="@{'/entries/' + ${entry.id} + '/tags/' + ${tag.id} + '/remove'}"
+                    class="btn btn-sm">✕</a>
+                  </span>
+                  </p>
+                
+                <!-- Buttons Bearbeiten & Löschen -->
+                <div class="d-flex align-items-end flex-row">
+                  <a
+                    th:href="@{'/entries/' + ${entry.id} + '/edit'}"
+                    class="btn btn-warning btn-sm me-2"
+                    >Bearbeiten</a>
+                  <form
+                    th:action="@{'/entries/' + ${entry.id} + '/delete'}"
+                    method="post"
+                    style="display: inline">
+                    <button
+                      type="submit"
+                      class="btn btn-danger btn-sm me-2"
+                      onclick="return confirm('Möchten Sie diesen Eintrag wirklich löschen?')">
+                      Löschen
+                    </button>
+                  </form>
+                  
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
@@ -31,5 +60,6 @@
     </div>
 
     <div th:replace="layout :: footer"></div>
+    <div th:replace="layout :: script"></div>
   </body>
 </html>
