--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="layout :: head('Liste der Tags')"></head>
-<body>
-<div th:replace="~{layout :: nav}"></div>
-
-<div class="container mt-5">
+  <head th:replace="layout :: head('Liste der Tags')"></head>
+  <body>
+    <div th:replace="~{layout :: nav}"></div>
     <h1 class="mb-4">Tags 🏷️</h1>
-    <a th:href="@{/tags/new}" class="btn btn-primary mb-4">Neuer Tag</a>
-    <div class="row">
-        <div class="col-md-8">
-            <ul class="list-group">
-                <li th:each="tag : ${tags}" class="list-group-item d-flex justify-content-between align-items-center">
-                    <span th:text="${tag.name}"></span>
-                    <a th:href="@{'/tags/' + ${tag.id} + '/delete'}" class="btn btn-danger btn-sm">Löschen</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+    
+    <div class="container">
+      
+      <a th:href="@{/tags/new}" class="btn btn-primary mb-4">Neuer Tag</a>
+          <ul class="list-group">
+            <li
+              th:each="tag : ${tags}"
+              class="list-group-item d-flex flex-column justify-content-end"
+              style="height: 100%;"
+            >
+            <div>
+              <span th:text="${tag.name}"></span>
+            </div>  
+              <div class="d-flex justify-content-end mt-auto">
+                <a
+                  th:href="@{'/tags/' + ${tag.id} + '/delete'}"
+                  class="btn btn-danger btn-sm">Löschen</a>
 
-<div th:replace="layout :: footer"></div>
-</body>
+              </div>
+            </li>
+          </ul>
+    </div>
+
+    <div th:replace="layout :: footer"></div>
+    <div th:replace="layout :: script"></div>
+  </body>
 </html>
