--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,5 @@
 body, html {
-        height: 100%;
+    height: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -26,6 +26,9 @@ footer {
     text-align: center;
     width: 100%;
     bottom: 0;
+    margin: auto;
+    padding: 10px 0;
+    position: sticky;
 }
 
 #home {
@@ -35,6 +38,16 @@ footer {
 .nav-link {
     font-size: 1.2em;
 }
+
+.puffer-controller {
+    height: 440px;
+}
+
+.badge {
+    padding: 3px 5px;
+    margin-bottom: 3px;
+}
+
 
 
 
