--- a/src/main/resources/templates/entry-edit.html
+++ b/src/main/resources/templates/entry-edit.html
@@ -18,6 +18,7 @@
             required
           />
         </div>
+
         <div class="form-group">
           <label for="content">Inhalt</label>
           <textarea
@@ -28,16 +29,12 @@
             required
             th:text="${entry.content}"
           ></textarea>
-          <label class="form-label" for="tags">Tags</label>
-          <select id="tags" name="tagIds" multiple class="form-control">
-            <option
-              th:each="tag : ${tags}"
-              th:value="${tag.id}"
-              th:text="${tag.name}"
-              th:selected="${entry.tags.contains(tag)}"
-            ></option>
-          </select>
         </div>
+
+        <div class="form-group">
+          
+        </div>
+
         <button type="submit" class="btn btn-primary mt-3">Speichern</button>
         <a th:href="@{/entries}" class="btn btn-secondary mt-3">Abbrechen</a>
       </form>
