--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -20,7 +20,7 @@
               <div class="d-flex justify-content-end mt-auto">
                 <a
                   th:href="@{'/tags/' + ${tag.id} + '/delete'}"
-                  class="btn btn-danger btn-sm">Löschen</a>
+                  class="btn btn-danger btn-sm" onclick="return confirm('Möchten Sie diesen Tag wirklich löschen?')">Löschen</a>
 
               </div>
             </li>
